fix: Allow scrolling in `.MainMenu__panelsWrap`
Make sure `.MainMenu__panelsWrap` is higher than that of `.SiteSearchCurtain`

--- a/src/scss/MainMenu.scss
+++ b/src/scss/MainMenu.scss
@@ -271,12 +271,18 @@
 		transition-property: opacity, visibility;
 
 		background-color: $color-faxafloi-100;
+
 		position: absolute;
 		top: 0;
-		right: 0;
+		left: calc(0.5 * #{$var--browser-scrollbar-width});
+		right: calc(-0.5 * #{$var--browser-scrollbar-width});
 		left: 0;
-		z-index: 1;
+		z-index: 3;
 		height: 100vh;
+
+		overflow-x: hidden;
+		overflow-y: auto;
+
 		@include extendSides();
 	}
 
